# miki

./: .env.example  .gitignore  README.md  agent.py  http_server.py  main.py  memory.py  model.py  output_structure.py  pyproject.toml  tools.py
.github/: copilot-instructions.md
static/: index.html
