[project]
name = "miki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "langchain>=1.0.2",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.1",
    "protobuf>=6.33.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
